themes/toph/static/css/style.css
/* ===[ Global styling ]=== */

:root {
  /* Default colors */
  --primary: darkorchid;
  --secondary: linen;
  --accent-color: darkslateblue;

  /* Default fonts */
  --default-font: "Open Sans";
  --title-font: "Bungee Shade";
  --header-font: "Roboto Slab";
}

body {
  background-color: var(--secondary);
  color: #330000;
  font-family: var(--default-font), sans-serif;
}

h1 { font-family: var(--title-font), serif; }

h2, h3, h4 { font-family: var(--header-font), serif; }

h1 {
  color: var(--primary);
  padding-bottom: 3rem;
  padding-top: 7rem;
}

h2, h4 { color: var(--accent-color); }

@media screen and (min-width: 601px) {
  h1 { font-size: 5em; }
  h2 { font-size: 40pt; }
  h3 { font-size: 28pt; }
  h4 { font-size: 22pt;}
}

@media screen and (max-width: 600px) {
  h1 { font-size: 16vw; }
  h2 { font-size: 10vw; }
  h3 { font-size: 8vw; }
  h4 { font-size: 5vw; }
}


/* ===[ Site navigation styling ]=== */

.navbar { position: fixed; }

.dropdown-menu { background-color: var(--accent-color); }

.navbar-light .navbar-nav .nav-link { color: var(--secondary); }

.navbar li a {
  background-color: var(--primary);
  border-color: var(--accent-color);
  border-style: solid;
  color: var(--secondary);
  text-align: center;
}

.navbar li a:hover {
  background-color: royalblue;
  text-decoration: underline;
  text-decoration-color: skyblue;
  text-decoration-style: dotted;
}


/* ===[ Main body styling ]=== */

main #projects-carousel .pc-fixed-height { height: 10vh; }

main #projects h3 { 
  background-color: var(--primary);
  color: var(--secondary);
}

main .rounded-profile img {
  border-radius: 50%;
  display: block;
  margin-bottom: 3rem; margin-left: auto; margin-right: auto;
  height: auto;
}

@media screen and (min-width: 601px) {
  main .rounded-profile img { max-width: 250px; }
}

@media screen and (max-width: 600px) {
  main .rounded-profile img { max-width: 140px; }
}


/* ===[ Footer styling ]=== */

footer { overflow: hidden; }

footer .imageblock {
  display: inline-block;
  padding: 0.5rem;
}

footer #footer-box {
  background-color: var(--primary);
  color: var(--secondary);
  font-size: 0.8rem;
}

footer #footer-box a {
  color: var(--secondary);
  text-decoration-style: dotted;
}

footer #footer-box a:hover {
  color: skyblue;
  text-decoration-style: dashed;
}

